--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dean's List - Curated Tech Wonders</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="pixel-header">
@@ -34,7 +34,7 @@
         </section>
 
         <!-- Opinion Pieces -->
-        <section class="category-section pixel-box">
+        <section class="category-section pixel-box" id="cultural-analysis">
             <button class="section-toggle pixel-interactive">
                 🎭 Cultural Analysis
                 <span class="badge">3 Resources</span>
@@ -58,7 +58,7 @@
         </section>
 
         <!-- Software Development -->
-        <section class="category-section pixel-box">
+        <section class="category-section pixel-box" id="dev-wisdom">
             <button class="section-toggle pixel-interactive">
                 👨💻 Dev Wisdom
                 <span class="badge">7 Resources</span>
@@ -98,13 +98,11 @@
                         "Where I learned Vim can be both terrifying and exhilarating"
                     </p>
                 </article>
-
-                <!-- Add similar blocks for other software dev resources -->
             </div>
         </section>
 
         <!-- Game Development -->
-        <section class="category-section pixel-box">
+        <section class="category-section pixel-box" id="game-dev">
             <button class="section-toggle pixel-interactive">
                 🎮 Game Dev Galaxy
                 <span class="badge">5 Resources</span>
@@ -139,13 +137,11 @@
                         "The spark that lit my game dev curiosity"
                     </p>
                 </article>
-
-                <!-- Add other game dev resources -->
             </div>
         </section>
 
         <!-- Cryptocurrency -->
-        <section class="category-section pixel-box crypto-section">
+        <section class="category-section pixel-box crypto-section" id="crypto">
             <button class="section-toggle pixel-interactive">
                 ₿ Crypto Cosmos
                 <span class="badge">6 Resources</span>
@@ -165,12 +161,8 @@
                         "Changed how I think about money and decentralization"
                     </p>
                 </article>
-
-                <!-- Add other crypto resources -->
             </div>
         </section>
-
-        <!-- Additional Sections -->
     </main>
 
     <footer class="pixel-footer">
