--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
             </button>
         </section>
 
-        <!-- Sections -->
-        <!-- Cultural Analysis -->
-        <section class="category-section pixel-box" id="cultural-analysis">
-            <button class="section-toggle pixel-interactive" aria-expanded="false" aria-controls="cultural-analysis-content">
-                🎭 Cultural Analysis
-                <span class="badge">3 Resources</span>
+        <!-- Opinion Pieces -->
+        <section class="category-section pixel-box" id="opinion-pieces">
+            <button class="section-toggle pixel-interactive" aria-expanded="false" aria-controls="opinion-pieces-content">
+                🎭 Opinion Pieces
+                <span class="badge">1 Resource</span>
             </button>
-            <div class="section-content" id="cultural-analysis-content">
-                <!-- Resource Card -->
+            <div class="section-content" id="opinion-pieces-content">
                 <article class="resource-card">
                     <h3>Hbomberguy</h3>
                     <div class="resource-meta">
@@ -59,19 +57,256 @@
                 </article>
             </div>
         </section>
-        <!-- Additional sections can be added here -->
+
+        <!-- Software -->
+        <section class="category-section pixel-box" id="software">
+            <button class="section-toggle pixel-interactive" aria-expanded="false" aria-controls="software-content">
+                💻 Software
+                <span class="badge">6 Resources</span>
+            </button>
+            <div class="section-content" id="software-content">
+                <article class="resource-card">
+                    <h3>t3dotgg (Theo)</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/@t3dotgg" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Full Stack TypeScript Development
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Known for tutorials on TypeScript and tools like t3 stack.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>ThePrimeagen</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/c/theprimeagen" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Programming with Rust, Vim, and TypeScript
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Software engineer sharing insights on programming and tools.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>Funfunfunction (MPJ)</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/c/funfunfunction" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        JavaScript and Functional Programming
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Engaging tutorials on JavaScript and web development.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>Methmethmethod</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/c/MethMethMethod" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Coding Concepts and Web Development
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Explains coding concepts and JavaScript in an engaging way.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>TheCodingTrain (Daniel Shiffman)</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/c/TheCodingTrain" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Creative Coding with JavaScript and p5.js
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Perfect for beginners, teaching creative coding.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>Austin Griffith</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/channel/UC_HI2i2peo1A-STdG22GFsA" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Ethereum Development and Web3
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Helps developers build on web3 with Scaffold-Eth.</p>
+                </article>
+            </div>
+        </section>
+
+        <!-- Crypto -->
+        <section class="category-section pixel-box" id="crypto">
+            <button class="section-toggle pixel-interactive" aria-expanded="false" aria-controls="crypto-content">
+                🪙 Crypto
+                <span class="badge">4 Resources</span>
+            </button>
+            <div class="section-content" id="crypto-content">
+                <article class="resource-card">
+                    <h3>What is Bitcoin?</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">Official Website</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://bitcoin.org/en/how-it-works" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Bitcoin How It Works
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Official guide to Bitcoin and its technology.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>What is Ethereum?</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">Official Website</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://ethereum.org/en/what-is-ethereum/" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Ethereum What Is
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Intro to Ethereum and decentralized tech.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>SHIB</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">Official Website</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://shibatoken.com/" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Shiba Token Website
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Shiba Inu coin and its ecosystem.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>Vitalik Buterin</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">Personal Website</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://vitalik.ca/" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Vitalik Buterin Website
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Ethereum co-founder’s insights on blockchain.</p>
+                </article>
+            </div>
+        </section>
+
+        <!-- Programming -->
+        <section class="category-section pixel-box" id="programming">
+            <button class="section-toggle pixel-interactive" aria-expanded="false" aria-controls="programming-content">
+                👨‍💻 Programming
+                <span class="badge">3 Resources</span>
+            </button>
+            <div class="section-content" id="programming-content">
+                <article class="resource-card">
+                    <h3>ChiliTomatoNoodle</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/channel/UCsyHonfwHi4fLb2lkq0DEAA" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        C++ and Game Development Tutorials
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">C++ and DirectX tutorials for game dev.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>ThinMatrix</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/user/ThinMatrix" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Indie Game Dev and OpenGL
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Devlogs and OpenGL game engine tutorials.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>DerekBanas</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Channel</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/user/derekbanas" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Comprehensive Programming Tutorials
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Tutorials on various programming languages.</p>
+                </article>
+            </div>
+        </section>
+
+        <!-- Game Dev -->
+        <section class="category-section pixel-box" id="game-dev">
+            <button class="section-toggle pixel-interactive" aria-expanded="false" aria-controls="game-dev-content">
+                🎮 Game Dev
+                <span class="badge">1 Resource</span>
+            </button>
+            <div class="section-content" id="game-dev-content">
+                <article class="resource-card">
+                    <h3>Foundation Game Design with HTML5 and JavaScript</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">Book</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.amazon.com/Foundation-Game-Design-HTML5-JavaScript/dp/1430247169" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Amazon Book Page
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Guide to 2D game design with HTML5 and JS.</p>
+                </article>
+            </div>
+        </section>
+
+        <!-- Topics -->
+        <section class="category-section pixel-box" id="topics">
+            <button class="section-toggle pixel-interactive" aria-expanded="false" aria-controls="topics-content">
+                📚 Topics
+                <span class="badge">2 Resources</span>
+            </button>
+            <div class="section-content" id="topics-content">
+                <article class="resource-card">
+                    <h3>Creepypasta</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Search</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/results?search_query=creepypasta" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        Creepypasta YouTube Search
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Horror fiction videos from internet culture.</p>
+                </article>
+                <article class="resource-card">
+                    <h3>True Crime</h3>
+                    <div class="resource-meta">
+                        <span class="resource-type">YouTube Search</span>
+                        <span class="resource-rating">★★★★★</span>
+                    </div>
+                    <a href="https://www.youtube.com/results?search_query=true+crime" target="_blank" rel="noopener noreferrer" class="resource-link">
+                        True Crime YouTube Search
+                        <span class="external-indicator">⤴</span>
+                    </a>
+                    <p class="resource-comment">Documentaries on real-life criminal cases.</p>
+                </article>
+            </div>
+        </section>
     </main>
 
-    <!-- Footer -->
     <footer class="pixel-footer">
         <div class="footer-grid">
-            <!-- Disclaimer -->
             <div class="disclaimer">
                 ⚠ All magic belongs to original wizards.<br />
                 🛡️ No tracking - Presence is ephemeral.
             </div>
-
-            <!-- GitHub CTA -->
             <div class="github-cta">
                 <a href="https://github.com/suttonwilliamd/DeansList" target="_blank" rel="noopener noreferrer" aria-label="Improve this digital garden on GitHub" class="github-link">
                     Improve this digital garden
@@ -80,12 +315,10 @@
         </div>
     </footer>
 
-    <!-- Theme Switcher -->
     <div class="theme-switcher" onclick="toggleTheme()" aria-label="Toggle theme between light and dark mode">
         <span id="theme-icon">🌓</span>
     </div>
 
-    <!-- Scripts -->
     <script src="./script.js"></script>
 </body>
-</html>
+                                                  </html>
